# TRADINGBOT

./: Cargo.toml  install.bat  start_trading_bot.bat
src/: config.rs  main.rs  types.rs
src/exchange/: bingx.rs  mod.rs
src/strategy/: mod.rs
src/trading/: mod.rs
