[package]
name = "crypto_trading_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
dotenv = "0.15"
async-trait = "0.1"
thiserror = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
percent-encoding = "2.3" 